# faste-dashboard

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
backend/: pyproject.toml
backend_axum/: Cargo.toml
backend_axum/src/: main.rs
backend_litestar/: README.md
backend_litestar/app/: main.py
frontend/: .prettierrc  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend/src/lib/: interfaces.ts
frontend/src/routes/: +layout.svelte  +page.svelte  chart_component.svelte  navbar.svelte
