[project]
name = "app"
version = "0.0.1"
description = "litestar backend"
authors = [
  { name = "Keven Ren", email="ren.keven@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litestar[standard]",
    "loguru",
    "mangum",
    "awswrangler",
    "pandas",
    "polars",
]

[project.optional-dependencies]
dev = ["pre-commit"]

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 120
fix = true
target-version = "py310"
select = ["I", "D", "UP", "S", "C4", "SIM"]
ignore = ["D100", "D104", "D107", "D205", "D200", "D203", "D213", "D401"]
