[package]
name = "backend_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {  version = "0.7.4" }
tokio = { version = "1.20.4", features = ["full"] }
aws-config = { version = "1.1.1" }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
polars = { version = "0.41.2", features = ["parquet", "lazy", "serde", "json"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
