[package]
name = "backend_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {  version = "0.7.4" }
tokio = { version = "1.20.4", features = ["full"] }
aws-config = { version = "1.1.1" }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
polars = { version = "0.41.2", features = ["parquet", "lazy", "serde", "json", "dtype-full","timezones", "temporal", "dynamic_group_by"] }
tower-http = { version = "0.5.2", features = ["cors"] }
http = "1.1.0"
chrono-tz = "0.9.0"
smartstring = "1.0.1"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
