[package]
name = "backend_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4" }
axum-server = { version = "0.6.0"}
dotenv = "0.15.0"
polars = { version = "=0.41.3", features = [
    "lazy",
    "parquet",
    "cloud",
    "gcp",
    "timezones",
    "serde",
    "serde-lazy",
] }
polars-lazy = { version = "=0.41.3", features = ["async"] }
http = "1.1.0"
serde_json = "1.0.111"
tokio = { version = "1.20.4", features = ["full"] }
futures = { version = "0.3.30" }
tower-http = { version = "0.5.2", features = ["cors"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }

# [dependencies]
# aws-config = { version = "1.1.1" }
# chrono-tz = "0.9.0"
# google-cloud-storage = "0.20.0"
# serde_json = "1.0.111"
# smartstring = "1.0.1"
